--- a/codebase/libs/qtplot/src/CMakeLists.txt
+++ b/codebase/libs/qtplot/src/CMakeLists.txt
@@ -12,7 +12,7 @@
 project (libqtplot)
 
 #Finding Qt
-find_package (Qt6 COMPONENTS Core)
+find_package (Qt6 COMPONENTS Core QUIET)
 if (NOT Qt6_FOUND)
   find_package (Qt5 COMPONENTS Core REQUIRED)
 endif()
