--- a/codebase/apps/mdv_utils/src/gint2mdv/Makefile
+++ b/codebase/apps/mdv_utils/src/gint2mdv/Makefile
@@ -35,10 +35,10 @@ MODULE_TYPE=progcpp
 
 TARGET_FILE = gint2mdv
 
-LOC_INCLUDES = -I.. $(SYS_X_INCLUDES) 
+LOC_INCLUDES = -I..
 LOC_CFLAGS = 
 LOC_CPPC_CFLAGS =
-LOC_LDFLAGS = $(SYS_X_LDFLAGS) 
+LOC_LDFLAGS =
 LOC_LIBS = \
 	-lcidd -lmdv -lrapformats -ltoolsa -lpthread \
 	-ldataport -ltdrp -lbz2 -lz \
