--- a/codebase/libs/cidd/src/cdata_util/Makefile
+++ b/codebase/libs/cidd/src/cdata_util/Makefile
@@ -10,7 +10,7 @@
 
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_macros
 
-LOC_INCLUDES = -I../include
+LOC_INCLUDES = -I../include $(SYS_X_INCLUDES)
 LOC_CFLAGS = -g
 
 TARGET_FILE = ../libcidd.a
