Adding Era5Nc2Mdv to apps/ingest/src/_makefiles/makefile.lrose-core

--- a/codebase/apps/ingest/src/_makefiles/makefile.lrose-core
+++ b/codebase/apps/ingest/src/_makefiles/makefile.lrose-core
@@ -22,7 +22,8 @@ SUB_DIRS = \
 	CwbObs2Spdb \
 	CwbSfc2Mdv \
 	EolMobileKml2Spdb \
-	EraNc2Mdv \
+	EraGrib2Mdv \
+	Era5Nc2Mdv \
 	GemVolXml2Dsr \
 	Gini2Mdv \
 	GoesRGLM2Spdb \
