apps/radar/src/Ecco/CMakeLists.txt - adding TerrainHt and SquareDegree

--- a/codebase/apps/radar/src/Ecco/__makefile.template
+++ b/codebase/apps/radar/src/Ecco/__makefile.template
@@ -52,13 +52,17 @@ LOC_CFLAGS =
 HDRS = \
 	$(PARAMS_HH) \
 	Ecco.hh \
-	Args.hh
+	Args.hh \
+	SquareDegree.hh \
+	TerrainHt.hh
 
 CPPC_SRCS = \
 	$(PARAMS_CC) \
 	Ecco.cc \
 	Args.cc \
-	Main.cc 
+	Main.cc \
+	SquareDegree.cc \
+	TerrainHt.cc
 
 #
 # tdrp macros
