cmake - For QT6 require c++17, otherwise for QT5 stay with C++11

--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -117,7 +117,12 @@ endFunction()
 enable_testing()
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC ")
+if (Qt5_FOUND)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -std=c++11 ")
+else()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -std=c++17 ")
+endif(Qt5_FOUND)
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNO_JASPER_LIB ")
 
 # Set RPATH so that executablefinds lrose libraries without needing LD_LIBRARY_PATH
